# esp32-marauder-board

./: .gitignore  README.md
firmware/: README.md
firmware/main/: CMakeLists.txt  main.c
firmware/main/bme280/: bme280.c  bme280.h  i2c_bme280.c  i2c_bme280.h
firmware/main/gui/: gui.c  gui.h
firmware/main/lcd_driver/: lcd_driver.c  lcd_driver.h
firmware/main/menu/: menu.c  menu.h
firmware/main/wifi/: wifi.c  wifi.h
